# anki-3d-engine-3rd-party

./: .gitignore  CMakeLists.txt  README.md
GLEW/: CMakeLists.txt
GLEW/include/GL/: glew.h
SDL2/: CMakeLists.txt  Makefile  config.status
SDL2/include/: SDL_config.h  SDL_config_linux.h  SDL_config_windows.h  SDL_revision.h  SDL_stdinc.h
SDL2/src/video/x11/: SDL_x11vulkan.c
SPIRV-Cross/: CMakeLists.txt  spirv_common.hpp  spirv_cross.hpp
assimp/: CMakeLists.txt
assimp/code/: ColladaHelper.h  ColladaLoader.cpp  ColladaParser.cpp
assimp/include/assimp/: light.h  material.h  mesh.h  scene.h
bullet/LinearMath/: btScalar.h
glslang/: CMakeLists.txt  test.vert
glslang/SPIRV/: GlslangToSpv.h
glslang/Test/: hlsl.intrinsics.negative.vert
glslang/glslang/Include/: Common.h  intermediate.h
imgui/: CMakeLists.txt
include/SDL/: SDL_config.h
lib64/: libSDL-1.3.so.0.0.0
lua/: CMakeLists.txt  README  lapi.c  llex.c  llimits.h  lua.h  lua.hpp
newton/: CMakeLists.txt
newton/applications/modelEditor/standardPlugins/dPluginCommons/: dPluginMesh.h
newton/core/: dgConvexHull3d.cpp  dgTypes.h
newton/coreLibrary_300/source/meshUtil/: dgMeshEffect3.cpp
newton/coreLibrary_300/source/physics/: dgCollisionScene.cpp
nuklear/: nuklear.h
png/: CMakeLists.txt
tinyexpr/: tinyexpr.c
tinyxml2/include/: tinyxml2.h
trunk/: CMakeLists.txt  README
trunk/GLEW/: CMakeLists.txt
trunk/GLEW/include/GL/: glew.h
trunk/SDL2/: CMakeLists.txt
trunk/SDL2/include/: SDL_config.h  SDL_config_windows.h  SDL_revision.h
trunk/assimp/: CMakeLists.txt
trunk/bullet/: CMakeLists.txt
trunk/bullet/BulletDynamics/ConstraintSolver/: btSolverBody.h
trunk/bullet/LinearMath/: btQuaternion.h  btScalar.h
trunk/freeimage/: CMakeLists.txt  README
trunk/include/SDL/: SDL_revision.h
trunk/lua/: CMakeLists.txt  README  lstate.c  lstate.h
trunk/png/: CMakeLists.txt
volk/: CMakeLists.txt
z/: CMakeLists.txt
zlib/: CMakeLists.txt
