CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(ANKI_EXTERN_SUB_DIRS tinyxml2 lua bullet)

IF(ANKI_WINDOW_BACKEND STREQUAL "GLXX11")
	SET(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} GLEW)
ENDIF()

IF(NOT ANKI_SYSTEM_LIBZ)
	SET(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} z)
ENDIF()

IF(NOT ANKI_SYSTEM_LIBPNG)
	SET(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} png)
ENDIF()

FOREACH(TMP ${ANKI_EXTERN_SUB_DIRS})
	ADD_SUBDIRECTORY(${TMP})
ENDFOREACH()

