CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(ANKI_EXTERN_SUB_DIRS tinyxml2 lua bullet png z)

IF(${ANKI_WINDOW_BACKEND} STREQUAL "GLXX11" OR ${ANKI_WINDOW_BACKEND} STREQUAL "MACOS")
	SET(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} GLEW)
ENDIF()

IF(ANKI_BUILD_TOOLS)
	SET(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} assimp)
ENDIF()

FOREACH(TMP ${ANKI_EXTERN_SUB_DIRS})
	ADD_SUBDIRECTORY(${TMP})
ENDFOREACH()

