cmake_minimum_required(VERSION 2.8)

set(ANKI_EXTERN_SUB_DIRS tinyxml2 lua bullet z)

if(${ANKI_WINDOW_BACKEND} STREQUAL "GLXX11" OR ${ANKI_WINDOW_BACKEND} STREQUAL "MACOS")
	set(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} GLEW)
endif()

if(ANKI_BUILD_TOOLS)
	set(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} assimp)
endif()

if(ANKI_USE_SDL)
	set(ANKI_EXTERN_SUB_DIRS ${ANKI_EXTERN_SUB_DIRS} SDL2)
endif()

FOREACH(TMP ${ANKI_EXTERN_SUB_DIRS})
	ADD_SUBDIRECTORY(${TMP})
ENDFOREACH()

