FILE(GLOB_RECURSE BT_LINEAR_MATH_SOURCES LinearMath/*.cpp)
FILE(GLOB_RECURSE BT_COLLISION_SOURCES BulletCollision/*.cpp)
FILE(GLOB_RECURSE BT_DYNAMICS_SOURCES BulletDynamics/*.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#IF(ANKI_MATH_SIMD STREQUAL "SSE")
#	ADD_DEFINITIONS("-DBT_USE_SSE")
#ELSEIF(ANKI_MATH_SIMD STREQUAL "NEON")
#	ADD_DEFINITIONS("-DBT_USE_NEON")
#ENDIF()

ADD_LIBRARY(ankibullet ${BT_LINEAR_MATH_SOURCES} ${BT_COLLISION_SOURCES} ${BT_DYNAMICS_SOURCES})
