FILE(GLOB_RECURSE PNG_SOURCES *.c)
FILE(GLOB_RECURSE PNG_HEADERS *.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ ${CMAKE_CURRENT_SOURCE_DIR}/../z)

ADD_LIBRARY(ankipng ${PNG_SOURCES} ${PNG_HEADERS})
TARGET_LINK_LIBRARIES(ankipng ankiz)
SET_TARGET_PROPERTIES(ankipng PROPERTIES LINKER_LANGUAGE C)
